name:                chap8
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/chap8#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/chap8#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Absyn, Env, Canon, Frame, Gensym, Lexer, Parser,
                       Symtab, Semant, Temp, Token, Translate, Tree,
                       Types, X64Frame
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , mtl
  default-language:    Haskell2010

executable chap8-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chap8
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

test-suite chap8-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chap8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/chap8
